--- a/homework.Rmd
+++ b/homework.Rmd
@@ -909,14 +909,14 @@ Today, you will:
 
 2. Extract from your very own face a living Demodex spp. mite!
 
-[<br>
+<br>
 
 <p align="center">
     <img src="images/demodex_follicularum.jpg">
     <em>*Demodex folliculorum* mite from a human face. Image from [Elston and Elston 2014](https://doi.org/10.1016/j.clindermatol.2014.02.012).</em>
 </p>
 
-<br>]
+<br>
 
 [INSERT VIDEO HERE]
 
@@ -983,6 +983,159 @@ The vast majority of adult humans host the human eyebrow mite, *Demodex follicul
 <br>
 
 ### Lab 7
+
+<br>
+
+<p align="center">
+    <img src="images/puppy_host.jpg">
+    <em>Image courtesy of [Hebrew Matio via CC-BY-SA-4.0](https://commons.wikimedia.org/wiki/File:Dog_Breeds.jpg)</em>
+</p>
+
+<br>
+
+We've done a lot of gross stuff this quarter, but today's lab will be the grossest. Today, we focus on the protozoa - the smallest parasites we've covered so far. In order to see these parasites, you'll have to use a powerful compound microscope.
+
+Here are our two activities for today's lab:
+
+1. You will **dissect termites to view the many species of symbiotic protozoa** that live in their gut and help the host digest wood.
+
+2. You will perform a veterinary procedure called a "**fecal float**" to identify protozoan (and maybe, if we're lucky, some helminth) cysts in dog poop! We might also have some wildlife poop on hand.
+
+<br>
+
+#### Flagellates
+
+The flagellates consist of a large diversity of protozoan forms whose relationships are not well understood. The taxonomy of flagellate groups has shifted quite a bit in recent years, and new phyla have been elevated (see textbook), so we will just recognize groups at the level of Orders. Among the flagellates, many are free-living aquatic organisms. Parasitism appears to have evolved a number of times in different groups.
+
+Flagella are slender, whip-like structures that function as locomotory organelles. They are common to all protozoans we know as flagellates. The ultrastructure of flagella is a specific microtubule arrangement that is the same in **cilia** (9 peripheral and 2 central). But flagella articulate into a longitudinal axis of the body of the protozoan, whereas cilia cover the body surface. Most protozoans possess **centriole** organelles; flagellates possess a certain type of centriole called a **kinetosome**, from which the **axostyle** and **costa** arise. The axostyle is a rod-like bundle of microtubules that runs longitudinally in flagellates, providing the support for flagellar movement. Many flagellates have an **undulating** membrane, which is like a flexible fin running along one axis of the body such that the distal edge of the fin is a flagellum, and the base of the fin is the costa. Flagellates can have multiple and sometimes a reat number of flagella, some of which may articulate into the central axostyle and others that articulate into lateral grooves.
+
+Most flagellates that are intestinal parasites have two life stages: trophozoites and cysts. Both stages are very small, usually well under 1 mm. The cyst stage is expelled in the feces of infected individuals. Cysts are resistant, thick-walled, dormant stages that are infective tot the host when ingested. Once inside the host, gastric fluids induce the trophozoite stage to emerge from the cyst. The trophozoites reproduce **asexually** inside the host’s intestine by **longitudinal binary fission** in which the flagellate body divides longitudinally. Tremendous numbers can accumulate and pathology varies among the species. Regions where sanitation is poor and fecal contamination of drinking water and agriculture persists favor the transmission of human flagellate parasites.
+
+<br>
+
+<p align="center">
+    <img src="images/giardia.jpg">
+    <em>Image courtesy of [Adrian Pan via Creative Commons Attribution-Noncommercial-No Derivative Works 2.0 Unported License](https://www.flickr.com/photos/phylomon/8662461983)</em>
+</p>
+
+<br>
+
+#### Coccidian apicomplexans
+
+Coccidian apicomplexans are all endoparasites of vertebrates and invertebrates. The life cycle may be direct or indirect but always involves a prominent stage of intracellular reproduction that often contributes significantly to pathology in the host. Typical sites of infection include the digestive tract epithelium, liver, kidney, and erythrocytes (red blood cells).
+
+The life cycle typically involves three distinct phases: **schizogony** (merogony in your text), **gamogony** (gametogony in your text), and **sporogony**. Infective **sporozoites** are ingested by the host (Order Eucoccidia) or delivered in the bite of an infected insect micropredator (Order Haemosporida). Each sporozoite invades a host cell and becomes an amoeboid, feeding, growing stage called the **trophozoite** (sound familiar?). The trophozoite undergoes schizogony, a series of asexual divisions, to produce **merozoites**. The merozoites emerge from the host cell to infect healthy cells and initiate further cycles of schizogony or become gamonts. Gamogony produces “male” **microgametocytes** and “female” **macrogametocytes**. The microgametocyte then divides to form flagellated microgametes. Fertilization of the microgametocyte results in a **zygote**. The zygote is encased in an **oocyst**. Within the oocyst, the zygote undergoes further asexual divisions, producing sporozoites for transmission to the next host.
+
+In this lab, we will examine coccidian apicomplexans. Current classification is rapidly changing, so we will use “coccidian” as a common name for this group. Eucoccidian parasites cause serious disease in humans and domestic animals. Immunocompromised humans are particularly susceptible to coccidiosis; individuals infected with HIV often succumb to coccidian infections that would be unusual in healthy individuals.
+
+<br>
+
+<p align="center">
+    <img src="images/coccidian_oocysts.jpg">
+    <em>Image courtesy of [Joel Mills via CC BY-SA 3.0](https://en.wikipedia.org/wiki/Coccidia#/media/File:Coccidia.JPG)</em>
+</p>
+
+<br>
+
+#### Demonstration instructions
+
+**Termite flagellate demonstration**
+
+Termites and wood roaches share in common the habit of dining on wood. Most other insects and animals do not feed on wood because the dense, splintering cellulose matter is tough to digest and the enzyme cellulose is required. Termites and wood roaches share the same secret: they both have intestinal communities of flagellates that produce cellulose as a by-product of their own metabolic functions. This is a perfect example of a mutualism. The termite benefits by receiving the enzyme required to digest its food and the flagellates benefit by having a host to provide habitat with plenty of food. Without their intestinal flagellates, termites and wood roaches would starve.
+
+The communities of flagellates in the intestine of a single termite are staggering. Fourteen genera are known. Thousands of individuals of multiple species can infect a single termite. How the species interact is unknown. You will have the opportunity to examine one for yourself.
+
+Each student should dissect two termites. You are looking for the flagellates located in the gut. Remove the entire intestinal tract and smear it on to a clean glass slide, add a drop of Ringer’s solution, and then add a coverslip. Find, observe, and draw as many different types of flagellates as you can. Use oil immersion at 100x and clean the scope with lens paper and 100% ethanol when you are finished.
+
+<br>
+
+<p align="center">
+    <img src="images/termite_flagellates.jpg">
+    <em>Image from [Brugerolle and Bordereau 2004](https://doi.org/10.1016/j.ejop.2004.05.001)</em>
+</p>
+
+<br>
+
+**Dog poop demonstration**
+
+In this demo, we will survey the intestinal parasite fauna of some local mammal species. Dog poop is (as you can imagine) easiest to acquire. Dogs are definitive hosts to a variety of cestodes, nematodes, and protozoan parasites. Infective stages (eggs, cysts, proglottids) are voided in the feces. Best results are obtained from dogs who are not regularly treated with anti-helminthics (de-worming medicine). Bring your dog’s poop or the poop of another cooperative canine. We will also have poop from several other terrestrial and aquatic mammals.
+
+**NOTE**: Do not, under any circumstances, collect raccoon feces. Raccoons may be infected with the nematode *Baylisascaris procyonis*, and you could become infected by handling the feces. This worm can cause devastating pathology in human hosts.
+
+*Fecal sample preparation:*
+
+1. Examine your poop. Note anything unusual (e.g., proglottids, food particles).
+2. Obtain an OVASSAY fecal sample collection device.
+3. To prepare the sample, remove the insert from the collections vial, fill the small end of the insert by pressing it into the fecal sample, and place the loaded insert back into the device.
+4. Close the cap.
+5. Host data are an important part of sample collection in parasitology. Without this information, the sample has little or no scientific value. Record the following host parameters:
+
+* Sex and approximate age of dog
+* Breed of dog (or best guess)
+* Condition of dog: This will give a proxy for health / level of veterinary care that the dog receives. Is the animal well-groomed? Does it have bright eyes and a sprightly demeanor, or is the unfortunate creature a victim of neglect with a matted coat, mangy skin, and a lackluster attitude?
+* Evidence of human supervision: Be sure to record the presence/absence of a collar, tag, leash, and owner. Is the dog walking its human (and therefore probably valued and cared for) or is it simply loitering with no human supervision?
+* Record all host data in your lab notebook.
+ 
+*Fecal sample assay:*
+
+1. WEAR GLOVES. Chew cinnamon gum if you are bothered by the smell.
+2. With the poop-filled insert in place, add the float solution to your collection vial until the fluid fills half of the chamber.
+3. Mix thorough by rotating the insert. This separates eggs and cysts from the fecal sample.
+4. Apply pressure on the poop-filled insert until it is firmly seated in the collection vial (you may use the cap to do this).
+5. Carefully fill the vial to the brim with flotation solution. Form a meniscus.
+6. Place a coverslip on the meniscus for 10 minutes. Carefully transfer the coverslip to the slide for microscopic examination.
+7. Remember to close the vial cap tightly for disposal!
+8. Use the compound microscope to examine your slide – these eggs and cysts are tiny!
+9. Scan the sample at 40X, looking for any regularly shaped objects among the debris.
+10. Helminth eggs are often golden and round, oval, or oblong. Use the key to helminth ova below to identify any eggs that you find.
+11. Some of the eggs can be identified under the 40X objective, but others will require oil immersion. Cestode eggs are particularly interesting, so be sure to use oil immersion to examine these. Ask your TA to show you how to do oil immersion.
+12. Protozoan cysts are usually round and extremely small, so oil immersion will be required to observe cysts. Draw any eggs or cysts that you find in your sample and identify the parasite to the most accurate taxonomic level. Record your data on the board.
+13. What features can you use to determine the taxonomic affinities of eggs in poo?
+
+<br>
+
+<p align="center">
+    <img src="images/cyst_comparison.jpg">
+    <em>Image courtesy of the [University of Saskatchewan Western College of Veterinary Medicine](https://wcvm.usask.ca/learnaboutparasites/diagnostics/eggoocyst-comparison---canine-flotation.php)</em>
+</p>
+
+<br>
+
+<p align="center">
+    <img src="images/eggs_in_fecals.png">
+    <em>Image courtesy of Knott and Elliott, [University of Queensland](https://shire.science.uq.edu.au/parasites/helminths/nematodes/faecal-floats.php)</em>
+</p>
+
+<br>
+
+### Slides to examine 
+
+**Draw at least 5 of the following:**
+
+* *Entamoeba histolytica*
+* *Entamoeba coli*
+* *Chilomastix mesnili*
+* *Giardia lamblia (duodenalis)*
+* *Trichomonas vaginalis*
+* *Trypanosoma rhodesiense*
+* *Trypanosoma cruzi*
+* *Leishmania major*
+* *Eimeria* spp.
+* *Toxoplasma gondii*
+* *Plasmodium falciparum*
+* *Plasmodium cynomolgi*
+
+<br>
+
+#### Questions
+
+1. How are you most likely to become infected with a parasitic flagellate?
+2. If a village is plagued by multiple species of intestinal flagellates and amoebas, what does that tell you about the living conditions in that village?
+3. How do young termites obtain a flagellate infection, which they need in order to digest food?
+4. Termites have complex social communities with a caste system. Can you draw any correlations between insect social behavior and mutualistic flagellates?
+
+<br>
+
 
 ### Lab 8
 
