updates based on instructional personnel meeting

--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -63,7 +63,7 @@ Weekly, open-book Canvas quizzes are designed (1) to help you check in with your
 
 ### Second draft
 
-### Oral presentation
+### Poster presentation
 
 #### Presentation rubric
 
