starting to build out class content

--- a/content.Rmd
+++ b/content.Rmd
@@ -21,27 +21,372 @@ output:
 
 ## Class 1
 
+**Read:** 
+
+* R&J Chapters 1 & 2  
+* Bush et al. 1997
+* [this story](references/nematomorph_story.pdf)
+
+**UWCC:** 01.01, 01.02, 01.04, 01.05
+
+<br>
+<center>
+[![Lecture 1.1 - What exactly am I getting myself into?](https://img.youtube.com/vi/0D82huCi_PE/0.jpg)](https://www.youtube.com/watch?v=0D82huCi_PE)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 1.2 - What is a parasite?](https://img.youtube.com/vi/mcjApBWRSGg/0.jpg)](https://www.youtube.com/watch?v=mcjApBWRSGg)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 1.3 - Parasitism on the spectrum of symbiosis](https://img.youtube.com/vi/AeEJHvCK5fk/0.jpg)](https://www.youtube.com/watch?v=AeEJHvCK5fk)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 1.4 - Important terminology](https://img.youtube.com/vi/nfLQBuITRJE/0.jpg)](https://www.youtube.com/watch?v=AeEJHvCK5fk)
+</center>
+</br>
+
+<br>
+
 ## Class 2
+
+**Read:** 
+
+* R&J Chapters 13 & 15  
+* Lafferty & Morris 1996
+
+**UWCC:** 02.01a, 02.01b, 02.02a, 02.02b
+
+<br>
+<center>
+[![Lecture 2.1 - Adaptations to the life parasitic](https://img.youtube.com/vi/2H3xmuwZ7Is/0.jpg)](https://www.youtube.com/watch?v=2H3xmuwZ7Is)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 2.2 - Introduction to the trematodes](https://img.youtube.com/vi/cP2mwWRGaJk/0.jpg)](https://www.youtube.com/watch?v=cP2mwWRGaJk)
+</center>
+</br>
+
+<br>
 
 ## Class 3
 
+**Read:** 
+
+* R&J Chapters 17 & 18  
+* Lafferty & Morris 1996
+
+**UWCC:** 03.02a, 03.02b
+
+<br>
+<center>
+[![Lecture 3.1 - Latin for parasitologists](https://img.youtube.com/vi/uQG3q7ToqY8/0.jpg)](https://www.youtube.com/watch?v=uQG3q7ToqY8)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 3.2 - Trematode life cycles are variations on a theme](https://img.youtube.com/vi/qPMLH83EYQM/0.jpg)](https://www.youtube.com/watch?v=qPMLH83EYQM)
+</center>
+</br>
+
+<br>
+  
 ## Class 4
+
+**Read:** 
+
+* R&J Chapter 16
+
+**UWCC:** 04.02
+
+<br>
+<center>
+[![Neglected, A Story of Schistosomiasis Infection in Ghana - Sand Animation](https://img.youtube.com/vi/lo1cRLdqKq4/0.jpg)](https://www.youtube.com/watch?v=lo1cRLdqKq4)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 4.1 - Life cycle and pathology of the schistosomes](https://img.youtube.com/vi/NvXzw_6AWvo/0.jpg)](https://www.youtube.com/watch?v=NvXzw_6AWvo)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 4.2 - Immunopathology of the schistosomes](https://img.youtube.com/vi/ut8BUVKZC9Y/0.jpg)](https://www.youtube.com/watch?v=ut8BUVKZC9Y)
+</center>
+</br>
+
+<br>
 
 ## Class 5
 
+**Read:** 
+
+* Nothing!
+
+**UWCC:** 05.02, 05.03
+
+<br>
+<center>
+[![Lecture 5.1 - Distribution of the schistosomes](https://img.youtube.com/vi/HbKICGlLEPY/0.jpg)](https://www.youtube.com/watch?v=HbKICGlLEPY)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 5.2 - On a mission to destroy the schistosomes](https://img.youtube.com/vi/RtnPYkTL73c/0.jpg)](https://www.youtube.com/watch?v=RtnPYkTL73c)
+</center>
+</br>
+
+<br>
+
 ## Class 6
+
+**Read:** 
+
+* R&J Chapter 19
+
+**UWCC:** 06.03a, 06.03b, 06.03c
+
+<br>
+<center>
+[![Lecture 6.1 - Turbellarians](https://img.youtube.com/vi/79t8nZ0Mzts/0.jpg)](https://www.youtube.com/watch?v=79t8nZ0Mzts)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 6.2 - Fecampiids](https://img.youtube.com/vi/ZHTaKzOG7DI/0.jpg)](https://www.youtube.com/watch?v=ZHTaKzOG7DI)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 6.3 - Mongenes](https://img.youtube.com/vi/n_MQsNPCK1U/0.jpg)](https://www.youtube.com/watch?v=n_MQsNPCK1U)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 6.4 - Introduction to myxozoans](https://img.youtube.com/vi/yt8bvDXR5b4/0.jpg)](https://www.youtube.com/watch?v=yt8bvDXR5b4)
+</center>
+</br>
+
+<br>
 
 ## Class 7
 
+**Read:** 
+
+* R&J Chapter 21
+
+**UWCC:** 07.01, 07.02, 07.03, 07.04
+
+<br>
+<center>
+[![Lecture 7.1 - Introduction to the cestodes](https://img.youtube.com/vi/7csb7NMZsV4/0.jpg)](https://www.youtube.com/watch?v=7csb7NMZsV4)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 7.2 - The vertebrate gut as habitat](https://img.youtube.com/vi/oVjsGCGaVsM/0.jpg)](https://www.youtube.com/watch?v=oVjsGCGaVsM)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 7.3 - Cestode energetics](https://img.youtube.com/vi/c9g8jUjpcR0/0.jpg)](https://www.youtube.com/watch?v=c9g8jUjpcR0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 7.4 - Population and community ecology of tapeworms](https://img.youtube.com/vi/IpFfMCaDXPw/0.jpg)](https://www.youtube.com/watch?v=IpFfMCaDXPw)
+</center>
+</br>
+
+<br>
+<center>
+[![Parasites Without Borders, Parasitic Diseases Lectures #38: Fish Tapeworm](https://img.youtube.com/vi/9sTu1qliixE/0.jpg)](https://www.youtube.com/watch?v=9sTu1qliixE)
+</center>
+</br>
+
+<br>
+
 ## Class 8
+
+**Read:** 
+
+* R&J Chapter 20
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 8.1 - The Pseudophyllidea](https://img.youtube.com/vi/WniGIEkRtI0/0.jpg)](https://www.youtube.com/watch?v=WniGIEkRtI0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 8.2 - The Cyclophyllidea - Dipylidium caninum](https://img.youtube.com/vi/R_s5VUm0JME/0.jpg)](https://www.youtube.com/watch?v=R_s5VUm0JME)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 8.3 - The Cyclophyllidea - Taenia saginata and T.  solium](https://img.youtube.com/vi/kxYeFf5awJI/0.jpg)](https://www.youtube.com/watch?v=kxYeFf5awJI)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 8.4 - The Cyclophyllidea - Echinococcus granulosus and E.  multilocularis](https://img.youtube.com/vi/kalP4Cfz7eg/0.jpg)](https://www.youtube.com/watch?v=kalP4Cfz7eg)
+</center>
+</br>
+
+<br>
+<center>
+[![Parasites Without Borders, Parasitic Diseases Lectures #36: Pork Tapeworm](https://img.youtube.com/vi/JH9w7oihVSA/0.jpg)](https://www.youtube.com/watch?v=JH9w7oihVSA)
+</center>
+</br>
+
+<br>
 
 ## Class 9
 
+**Read:** 
+
+* R&J Chapter 22
+
+**UWCC:** 09.01, 09.02, 09.03, 09.04, 09.05a, 09.05b, 09.06
+
+<br>
+<center>
+[![Lecture 9.1 - Intro to the nematodes](https://img.youtube.com/vi/Yz24NihsglQ/0.jpg)](https://www.youtube.com/watch?v=Yz24NihsglQ)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 9.2 - Countering parasitism by avoiding infective stages](https://img.youtube.com/vi/3DBXMVFc9VU/0.jpg)](https://www.youtube.com/watch?v=3DBXMVFc9VU)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 9.3 - Countering parasitism by compensating for pathology](https://img.youtube.com/vi/XMXEw8HJNjA/0.jpg)](https://www.youtube.com/watch?v=XMXEw8HJNjA)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 9.4 - Countering parasitism by limiting the number of parasites](https://img.youtube.com/vi/KTkAhXlqSV0/0.jpg)](https://www.youtube.com/watch?v=KTkAhXlqSV0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 9.5 - Nematodes and sexual selection](https://img.youtube.com/vi/HCjHC7efMKw/0.jpg)](https://www.youtube.com/watch?v=HCjHC7efMKw)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 9.6 - Nematodes and population regulation](https://img.youtube.com/vi/RUEJGuH8nJg/0.jpg)](https://www.youtube.com/watch?v=RUEJGuH8nJg)
+</center>
+</br>
+
+<br>
+<center>
+[![Parasites Without Borders, Parasitic Diseases Lectures #21: Nematodes](https://img.youtube.com/vi/9WX_E0_ZFE4/0.jpg)](https://www.youtube.com/watch?v=9WX_E0_ZFE4)
+</center>
+</br>
+
+<br>
+
 ## Class 10
+
+**Read:** 
+
+* R&J Chapter 25, 26, 27
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 10.1 - Geohelminths - Ascaris](https://img.youtube.com/vi/87qrq5J66wE/0.jpg)](https://www.youtube.com/watch?v=87qrq5J66wE)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 10.2 - Geohelminths - Trichuris](https://img.youtube.com/vi/hpBWbB900aM/0.jpg)](https://www.youtube.com/watch?v=hpBWbB900aM)
+</center>
+</br>
+
+<br>
 
 ## Class 11
 
+**Read:** 
+
+* R&J Chapter 23, 24, 28
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 11.1 - Geohelminths - Hookworm](https://img.youtube.com/vi/XsmmOPMv1R0/0.jpg)](https://www.youtube.com/watch?v=XsmmOPMv1R0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 11.2 - The anisakid nematodes](https://img.youtube.com/vi/1HmReFei-p0/0.jpg)](https://www.youtube.com/watch?v=1HmReFei-p0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 11.3 - Trichinella spiralis](https://img.youtube.com/vi/g6qPxjI06Yw/0.jpg)](https://www.youtube.com/watch?v=g6qPxjI06Yw)
+</center>
+</br>
+
+<br>
+
 ## Class 12
+
+**Read:** 
+
+* R&J Chapter 30
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 12.1 - Filarial nematodes - Dracunculus medinensis](https://img.youtube.com/vi/dUQ5g7mFrzo/0.jpg)](https://www.youtube.com/watch?v=dUQ5g7mFrzo)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 12.2 - Filarial nematodes - Wuchereria bancrofti](https://img.youtube.com/vi/sQv2T_ObIlE/0.jpg)](https://www.youtube.com/watch?v=sQv2T_ObIlE)
+</center>
+</br>
+
 
 ## Class 13
 
